TestSuite/Scheduler/Correct/Vacation.tjp
project test "Test" "$Id" 2000-01-01 2000-01-31

vacation "Monday off" 2000-01-03
vacation "Wednesday off" 2000-01-05
vacation "Few days off" 2000-01-12 - 2000-01-15

resource team "Team" {
	vacation 2000-01-21 - 2000-01-25
	
	resource r1 "Resource1" {
		vacation 2000-01-17
	}

	resource r2 "Resource2" {
		vacation 2000-01-18
	}
}

resource r3 "Resource3" {
}

task t1 "Task1" {
	start 2000-01-01
	effort 10d
	allocate r1
	minend 2000-01-26-17:59
	maxend 2000-01-26-18:00
}

task t2 "Task2" {
	start 2000-01-01
	effort 10d
	allocate r2
	minend 2000-01-26-17:59
	maxend 2000-01-26-18:00
}

task t3 "Task3" {
	start 2000-01-01
	length 13d
	allocate r3
	minend 2000-01-26-17:59
	maxend 2000-01-26-18:00
}

task t4 "Task4" {
	start 2000-01-01
	duration 26d
  minend 2000-01-26-23:59
  maxend 2000-01-27-00:00	
}

htmltaskreport "Vacation.html" {
	columns no, name, start, end, daily
}

